# BSCThesis

./: README.md
BloodSpace/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
BloodSpace/dependencies/: glad.c  glad.h
BloodSpace/resources/shaders/: circle.shader  image.shader  particle.shader  rectangle.shader  text.shader
BloodSpace/resources/states/: menu.state
BloodSpace/sources/: main.cpp
BloodSpace/sources/animation/: Animation.cpp  Animation.hpp
BloodSpace/sources/effects/: Dash.cpp  Dash.hpp
BloodSpace/sources/generators/: ObjectGenerator.hpp  ObjectGenerator.hxx  ParticleGenerator.cpp  ParticleGenerator.hpp
BloodSpace/sources/managers/: InputManager.cpp  InputManager.hpp  ResourceManager.hpp  ResourceManager.hxx
BloodSpace/sources/objects/: BaseObject.cpp  BaseObject.hpp  CreatureObject.cpp  CreatureObject.hpp  CursorObject.cpp  CursorObject.hpp  ObjectLogo.cpp  ObjectLogo.hpp  PlayerObject.cpp  PlayerObject.hpp  TextObject.cpp  TextObject.hpp
BloodSpace/sources/objects/objectsUtils/: ObjectMotion.hpp  ObjectMotion.hxx  ObjectShot.cpp  ObjectShot.hpp
BloodSpace/sources/parsers/: FileParser.cpp  FileParser.hpp
BloodSpace/sources/pieces/: Font.cpp  Font.hpp  Image.cpp  Image.hpp  Primitive.cpp  Primitive.hpp  Primitive.hxx  Shader.cpp  Shader.hpp  Shader.hxx  Text.cpp  Text.hpp
BloodSpace/sources/renderers/: PrimitiveRenderer.cpp  PrimitiveRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
BloodSpace/sources/states/: BaseState.cpp  BaseState.hpp  StateLogo.cpp  StateLogo.hpp  StateMenu.cpp  StateMenu.hpp  StatePlay.cpp  StatePlay.hpp  StatePlayground.cpp  StatePlayground.hpp  StateSwitcher.cpp  StateSwitcher.hpp
BloodSpace/sources/utils/: CommonIncludes.hpp  Settings.cpp  Settings.hpp  SharedResources.cpp  SharedResources.hpp
BloodSpace/sources/widgets/: BaseWidget.cpp  BaseWidget.hpp  ButtonWidget.cpp  ButtonWidget.hpp  LabelWidget.hpp
